--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,12 @@
               <p>
                 Your Name<br />
                 What You Are<br />
-                you@example.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/windea">github.com/windea</a><br />
+                <a href="http://weibo.com/windea">weibo.com/windea</a><br />
               </p>
             </div>
           </div>
