--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,5 +38,9 @@
     </footer>
 
     </div>
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0128a45bf555ee1996ad009eccde46af' type='text/javascript'%3E%3C/script%3E"));
+</script>	
   </body>
 </html>
