--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,13 +34,12 @@
         <p><small>
             <a href="http://github.com/{{ site.github }}/windea.github.io/new/gh-pages/_posts" target="_blank" title="撰写文章">Po</a>wer<a href="http://github.com/{{ site.github }}/windea.github.io/edit/gh-pages/{{ page.path }}" target="_blank" title="编辑页面">ed</a> by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="http://github.com/{{ site.github }}/windea.github.io" target="_blank" title="项目主页">GitHub</a>
              | <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/cn/" target="_blank" title="许可协议">©</a> 1984 - {{site.time | date:"%Y"}} <a href="/about/">{{ site.author }}</a>
-         </small></p>
-    </footer>
-
-    </div>
-<script type="text/javascript">
+			 | <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0128a45bf555ee1996ad009eccde46af' type='text/javascript'%3E%3C/script%3E"));
 </script>	
+         </small></p>
+    </footer>
+    </div>
   </body>
 </html>
