--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,13 @@
 			 | <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0128a45bf555ee1996ad009eccde46af' type='text/javascript'%3E%3C/script%3E"));
-</script>	
+</script>	 
+             |<!-- JiaThis Button BEGIN -->
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=2008731" charset="utf-8"></script>
+<!-- JiaThis Button END -->
          </small></p>
     </footer>
     </div>
