--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,6 +79,9 @@
                     </li>
                     {% endif %}
                 </ul>
+                <p class="copyright text-muted">
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                </p>
             </div>
         </div>
     </div>
