--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -88,19 +88,24 @@ layout: default
                     {% endif %}
                 </ul>
 
+<!-- 来必力City版安装代码 -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC8zNTg3MS8xMjQwNw==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
 
-                <!-- 网易云跟帖 start -->
-                <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-                <script>
-                  var cloudTieConfig = {
-                    url: document.location.href, 
-                    sourceId: "",
-                    productKey: "5ad0872bd4804c3b96c354fc97bb4f94",
-                    target: "cloud-tie-wrapper"
-                  };
-                </script>
-                <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
-                <!-- 网易云跟帖 end -->
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+</div>
+<!-- City版安装代码已完成 -->
 
                 {% if site.disqus_username %}
                 <!-- disqus 评论框 start -->
