--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,12 +62,18 @@ layout: default
 
                 <hr style="visibility: hidden;">
 
-               |<!-- JiaThis Button BEGIN -->
-                <script type="text/javascript">
-                var jiathis_config = {data_track_clickback:'true'};
-                </script>
-                <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=2008731" charset="utf-8"></script>
-                <!-- JiaThis Button END -->
+<!-- JiaThis Button BEGIN -->
+<div class="jiathis_style_24x24">
+	<a class="jiathis_button_qzone"></a>
+	<a class="jiathis_button_tsina"></a>
+	<a class="jiathis_button_tqq"></a>
+	<a class="jiathis_button_weixin"></a>
+	<a class="jiathis_button_renren"></a>
+	<a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+	<a class="jiathis_counter_style"></a>
+</div>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+<!-- JiaThis Button END -->
 
                 <ul class="pager">
                     {% if page.previous.url %}
