--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,21 +81,11 @@ layout: default
                 {% endif %}
             </ul>
 
-            
-            <!-- JiaThis Button BEGIN -->
-            <div class="jiathis_style_24x24">
-             <a class="jiathis_button_weixin"></a>
-             <a class="jiathis_button_tsina"></a>
-             <a class="jiathis_button_qzone"></a>
-             <a class="jiathis_button_tqq"></a>
-             <a class="jiathis_button_renren"></a>
-             <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
-             <a class="jiathis_counter_style"></a>
-         </div>
-         <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+         <!-- JiaThis Button BEGIN -->
+         <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?btn=r3.gif" charset="utf-8"></script>
          <!-- JiaThis Button END -->
 
-
+         <div class="comment">
          <!-- 来必力City版安装代码 -->
          <div id="lv-container" data-id="city" data-uid="MTAyMC8zNTg3MS8xMjQwNw==">
              <script type="text/javascript">
@@ -114,15 +104,7 @@ layout: default
            <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
        </div>
        <!-- City版安装代码已完成 -->
-
-       {% if site.disqus_username %}
-       <!-- disqus 评论框 start -->
-       <div class="comment">
-        <div id="disqus_thread" class="disqus-thread"></div>
-    </div>
-    <!-- disqus 评论框 end -->
-    {% endif %}
-
+       </div>
 </div>  
 
 <!-- Side Catalog Container -->
