--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,10 +42,11 @@ layout: default
                     {% comment %} endif {% endcomment %}
                     <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
                     <!-- JiaThis Button BEGIN -->
+		    <span class="meta"></span>
                     <div class="jiathis_style_24x24">
 	                   <a class="jiathis_button_weixin"></a>
                    	   <a class="jiathis_button_tsina"></a>
-                       <a class="jiathis_button_douban"></a>
+                           <a class="jiathis_button_douban"></a>
 	               	   <a class="jiathis_button_qzone"></a>
 	               	   <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
 	               	   <a class="jiathis_counter_style"></a>
