--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ layout: default
                     {% comment %} endif {% endcomment %}
                     <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
                     <!-- JiaThis Button BEGIN -->
-		    <h2 class="subheading"></h2>
+		    <div class="jiathis_style_24x24"></div>
                     <div class="jiathis_style_24x24">
 	                   <a class="jiathis_button_weixin"></a>
                    	   <a class="jiathis_button_tsina"></a>
