--- a/IMNew/css/index.css
+++ b/IMNew/css/index.css
@@ -9,6 +9,7 @@ header{
 .logo-con{
     width: 20%;
     float: left;
+    margin-top: -9px;
 }
 .nav-con{
     width: 80% ;
@@ -30,8 +31,12 @@ nav.navbar.bootsnav{
 nav.navbar.bootsnav ul.nav > li > a{
     color: #474747;
     text-transform: uppercase;
-width: 200px;
-    padding: 30px 30px;
+    width: 200px;
+    height: 50px;
+    padding-top: 20px;
+    padding-bottom: 45px;
+    padding-right: 30px;
+    padding-left: 30px;
 }
 nav.navbar.bootsnav ul.nav > li:hover{
     background: #f4f4f4;
@@ -55,7 +60,7 @@ nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
     font-size: 16px;
     font-weight: 500;
     position: absolute;
-    top: 35%;
+    top: 29%;
     right: 10%;
     transition: all 0.4s ease 0s;
 }
@@ -96,7 +101,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu > li:hover a{
     background-repeat:no-repeat;
     background-size:100% 100%;
     width: 100%;
-    height: 500px;
+    height: 300px;
     text-align: center;
 }
 .banner_bg .title{
@@ -119,6 +124,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu > li:hover a{
     width: 1200px;
     height: 1105px;
     margin: 0 auto;
+    margin-top: -80px;
     text-align: center;
 }
 .recycle .title{
@@ -136,4 +142,5 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu > li:hover a{
     color: #474747;
     text-align: center;
     font-size: 14px;
+    margin-top: -150px;
 }
